<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/cardBackground"
    android:elevation="76dp"
    android:padding="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/movieImageView"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:src="@drawable/demopic"
            android:tintMode="add"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textColor="@color/highlightedText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/castTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:text="@string/cast"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:text="@string/runtime"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yearLaunchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:text="@string/year"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/favButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:src="@drawable/ic_favorite" />

                <ImageView
                    android:id="@+id/shareButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:src="@drawable/share_con" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>